# toyCoder

./: .gitignore  CMakeLists.txt  readme.md
cmake/: copy.cmake
data/: article.txt
src/: main.cpp
src/core/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/utils/: ckunit.hpp  vector.hpp
